# shauver_omics

./: LICENSE  README.md  pyproject.toml
omics_functions/: genomics_functions.py
shauver_omics/: __init__.py  genomics_functions.py
shauver_omics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
